--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -85,6 +85,7 @@
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <AdditionalOptions>/MDd %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -110,6 +111,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalOptions>/MD %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -136,6 +138,7 @@
       <MinimalRebuild>false</MinimalRebuild>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalOptions>/MD %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -156,6 +159,8 @@
     <ClInclude Include="src\core\events\event.h" />
     <ClInclude Include="src\core\events\key_event.h" />
     <ClInclude Include="src\core\events\mouse_event.h" />
+    <ClInclude Include="src\core\layer.h" />
+    <ClInclude Include="src\core\layer_stack.h" />
     <ClInclude Include="src\core\log.h" />
     <ClInclude Include="src\core\startup.h" />
     <ClInclude Include="src\core\window.h" />
@@ -165,6 +170,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\app.cpp" />
+    <ClCompile Include="src\core\layer.cpp" />
+    <ClCompile Include="src\core\layer_stack.cpp" />
     <ClCompile Include="src\core\log.cpp" />
     <ClCompile Include="src\platform\windows\windows_window.cpp" />
     <ClCompile Include="src\supch.cpp">
