--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=51,18
-Size=834,780
+ViewportPos=856,206
+ViewportId=0xE927CF2F
+Size=268,521
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -22,4 +23,25 @@ Collapsed=0
 Pos=58,60
 Size=500,400
 Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=0,326
+Size=690,214
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][DockSpace Demo]
+Size=960,540
+Collapsed=0
+
+[Window][Example: Console]
+Pos=0,326
+Size=690,214
+Collapsed=0
+DockId=0x00000002,0
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=616,114 Size=960,521 Split=Y
+  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=960,305 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=960,214 Selected=0x46B5E99C
 
