dll to static lib

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,9 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=856,206
-ViewportId=0xE927CF2F
-Size=268,521
+Pos=552,28
+Size=377,483
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -28,20 +27,42 @@ Collapsed=0
 Pos=0,326
 Size=690,214
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000003,1
 
 [Window][DockSpace Demo]
-Size=960,540
+Size=1920,1027
 Collapsed=0
 
 [Window][Example: Console]
-Pos=0,326
-Size=690,214
+Pos=0,669
+Size=1046,358
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
+
+[Window][Example: Documents]
+Pos=1427,19
+Size=493,1008
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Example: Property editor]
+Pos=1048,19
+Size=377,523
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Example: Custom rendering]
+Pos=1111,432
+Size=370,379
+Collapsed=0
+DockId=0x00000008,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Pos=616,114 Size=960,521 Split=Y
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=960,305 CentralNode=1
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=960,214 Selected=0x46B5E99C
+DockSpace       ID=0x3BC79352 Pos=0,42 Size=1920,1008 Split=X
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1425,1008 Split=X
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=1046,792 Split=Y
+      DockNode  ID=0x00000001 Parent=0x00000007 SizeRef=1109,648 CentralNode=1
+      DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1109,358 Selected=0x46B5E99C
+    DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=377,792 Selected=0x593C5C9B
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=493,1008 Selected=0x1FD64BEB
 
