--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -16,9 +16,6 @@
     <Filter Include="src\platform">
       <UniqueIdentifier>{41663D6D-2DC9-CC11-D64E-05C8C2909894}</UniqueIdentifier>
     </Filter>
-    <Filter Include="src\platform\opengl">
-      <UniqueIdentifier>{B57427EB-21D6-04F9-AA43-4BAB16A43BB8}</UniqueIdentifier>
-    </Filter>
     <Filter Include="src\platform\windows">
       <UniqueIdentifier>{9B5931A8-87E8-BA71-3007-CF6C1C75CB17}</UniqueIdentifier>
     </Filter>
@@ -1343,6 +1340,9 @@
     <ClCompile Include="src\core\app.cpp">
       <Filter>src\core</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\imgui\imgui_build.cpp">
+      <Filter>src\core\imgui</Filter>
+    </ClCompile>
     <ClCompile Include="src\core\imgui\imgui_layer.cpp">
       <Filter>src\core\imgui</Filter>
     </ClCompile>
@@ -1364,6 +1364,5 @@
     <ClCompile Include="src\supch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\core\imgui\imgui_build.cpp" />
   </ItemGroup>
 </Project>
