first triangle with gl

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,8 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=552,28
-Size=377,483
+ViewportPos=946,387
+ViewportId=0xE927CF2F
+Size=377,489
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
