--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -141,7 +141,10 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\core\renderer\buffer.h" />
+    <ClInclude Include="src\core\renderer\renderer.h" />
     <ClInclude Include="src\core\renderer\shader.h" />
+    <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
     <ClInclude Include="src\core\app.h" />
     <ClInclude Include="src\core\core.h" />
@@ -577,7 +580,10 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\core\renderer\buffer.cpp" />
+    <ClCompile Include="src\core\renderer\renderer.cpp" />
     <ClCompile Include="src\core\renderer\shader.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_context.cpp" />
     <ClCompile Include="src\core\app.cpp" />
     <ClCompile Include="src\core\imgui\imgui_build.cpp" />
