--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -1343,6 +1343,9 @@
     <ClInclude Include="src\core\renderer\renderer.h" />
     <ClInclude Include="src\core\renderer\vertex_array.h" />
     <ClInclude Include="src\platform\opengl\opengl_vertex_array.h" />
+    <ClInclude Include="src\core\renderer\render_command.h" />
+    <ClInclude Include="src\core\renderer\renderer_api.h" />
+    <ClInclude Include="src\platform\opengl\opengl_renderer_api.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\app.cpp">
@@ -1379,5 +1382,8 @@
     <ClCompile Include="src\core\renderer\renderer.cpp" />
     <ClCompile Include="src\core\renderer\vertex_array.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_vertex_array.cpp" />
+    <ClCompile Include="src\core\renderer\renderer_api.cpp" />
+    <ClCompile Include="src\core\renderer\render_command.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_renderer_api.cpp" />
   </ItemGroup>
 </Project>
