--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -142,6 +142,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\core\renderer\buffer.h" />
+    <ClInclude Include="src\core\renderer\camera.h" />
     <ClInclude Include="src\core\renderer\renderer.h" />
     <ClInclude Include="src\core\renderer\renderer_api.h" />
     <ClInclude Include="src\core\renderer\render_command.h" />
@@ -586,6 +587,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\core\renderer\buffer.cpp" />
+    <ClCompile Include="src\core\renderer\camera.cpp" />
     <ClCompile Include="src\core\renderer\renderer.cpp" />
     <ClCompile Include="src\core\renderer\renderer_api.cpp" />
     <ClCompile Include="src\core\renderer\render_command.cpp" />
